--- a/.github/workflows/deploy-production.yml
+++ b/.github/workflows/deploy-production.yml
@@ -29,8 +29,9 @@ jobs:
         with:
           host: ${{ secrets.HOST_PRODUCTION }}
           username: ${{ secrets.USERNAME_PRODUCTION }}
-          password: ${{ secrets.PASSWORD_PRODUCTION }}
           port: ${{ secrets.PORT_PRODUCTION }}
+          key: ${{ secrets.SSH_KEY }}
+
           script: |
             export NVM_DIR=~/.nvm
             source ~/.nvm/nvm.sh
